update config: myinit

--- a/myinit.org
+++ b/myinit.org
@@ -122,8 +122,11 @@
 ** helpful
 #+BEGIN_SRC emacs-lisp
 
-  (use-package s)
-  (use-package dash)
+  (use-package s
+  :ensure t)
+
+  (use-package dash
+  :ensure t)
 
 #+END_SRC
 
@@ -131,6 +134,8 @@
 #+BEGIN_SRC emacs-lisp
 
   (use-package tree-sitter-hl-mode
+  :defer
+  :ensure t
   :hook ((ruby-mode . tree-sitter-hl-mode)
          (js-mode . tree-sitter-hl-mode)
          (rust-mode . tree-sitter-hl-mode)
@@ -145,11 +150,12 @@
 #+BEGIN_SRC emacs-lisp
 
   (use-package prodigy
-    :bind (("C-c 8" . #'prodigy)
+  :ensure t
+  :bind (("C-c 8" . #'prodigy)
            :map prodigy-view-mode-map
            ("$" . #'end-of-buffer))
-    :custom (prodigy-view-truncate-by-default t)
-    :config
+  :custom (prodigy-view-truncate-by-default t)
+  :config
   ;;  (load "~/.emacs.d/services.el" 'noerror))
     (prodigy-define-tag
     :name 'pulumi
@@ -172,6 +178,7 @@
 #+BEGIN_SRC emacs-lisp
 
   (use-package vertico
+    :ensure t
     :config
     (vertico-mode)
     (vertico-mouse-mode)
@@ -187,6 +194,7 @@
                 ("C-v d" . #'vertico-directory-delete-char)))
 
   (use-package consult
+    :ensure t
     :config
     (defun pt/yank-pop ()
       "As pt/yank, but calling consult-yank-pop."
@@ -214,15 +222,19 @@
     )
 
   (use-package marginalia
+    :ensure t
     :config (marginalia-mode))
 
   (use-package orderless
+    :ensure t
     :custom (completion-styles '(orderless basic)))
 
   (use-package ctrlf
+    :ensure t
     :config (ctrlf-mode))
 
   (use-package prescient
+    :ensure t
     :config (prescient-persist-mode))
 
 #+END_SRC
@@ -332,17 +344,21 @@ A tree layout file explorer for emacs, see more https://github.com/Alexander-Mil
 
   (ignore-errors (set-frame-font "JuliaMono-12"))
 
-  (use-package all-the-icons)
+  (use-package all-the-icons
+  :ensure t)
 
   (use-package all-the-icons-dired
+  :ensure t
   :after all-the-icons
   :hook (dired-mode . all-the-icons-dired-mode))
 
   (use-package all-the-icons-ivy-rich
+  :ensure t
   :after ivy-rich
   :config (all-the-icons-ivy-rich-mode 1))
 
   (use-package treemacs
+  :ensure t
   :bind ("C-c C-x t" . treemacs))
 
 #+END_SRC
@@ -379,9 +395,11 @@ Fow switching window easily
      (setq aw-keys '(?a ?s ?d ?f ?g ?h ?j ?k ?l)))
 
   (use-package ace-jump-mode
+  :ensure t
   :bind ("C-." . ace-jump-mode))
 
   (use-package ace-flyspell
+  :ensure t
   :bind
   (:map flyspell-mode-map
       ("C-M-i" . ace-flyspell-correct-word)))
@@ -444,11 +462,13 @@ See more Swiper: https://github.com/abo-abo/swiper
     ("M-y" . ivy-next-line)))
 
   (use-package counsel-ag-popup
+  :ensure t
   :bind
   (:map gpolonkai/pers-map
    ("s" . counsel-ag-popup)))
 
   (use-package counsel-projectile
+  :ensure t
   :custom
   (projectile-completion-system 'ivy)
   :config
@@ -465,8 +485,8 @@ See more Swiper: https://github.com/abo-abo/swiper
     (setq ivy-display-style 'fancy))
 
   (use-package ivy-yasnippet
-  :after
-  yasnippet
+  :ensure t
+  :after yasnippet
   :bind
   (("C-c y" . ivy-yasnippet)))
 
@@ -557,6 +577,7 @@ See more: http://company-mode.github.io/
 #+BEGIN_SRC emacs-lisp
 
   (use-package company
+  :ensure t
   :hook (emacs-lisp-mode . company-mode)
   :config
   (setq company-idle-delay 0)
@@ -564,6 +585,7 @@ See more: http://company-mode.github.io/
   (global-company-mode t))
 
   (use-package company-prescient
+  :ensure t
   :after company
   :config
   (company-prescient-mode))
@@ -571,11 +593,14 @@ See more: http://company-mode.github.io/
   (use-package company-irony
   :ensure t)
 
-  (use-package company-shell)
+  (use-package company-shell
+  :ensure t)
 
-  (use-package company-c-headers)
+  (use-package company-c-headers
+  :ensure t)
 
   (use-package company-emoji
+  :ensure t
   :after company
   :config
   (add-to-list 'company-backends 'company-emoji))
@@ -661,6 +686,7 @@ See more, https://github.com/joaotavora/yasnippet
 (setq lsp-ui-sideline-show-code-actions t)
 
   (use-package lsp-mode
+  :ensure t
   :commands lsp
   :diminish lsp-mode
   :bind
@@ -668,7 +694,8 @@ See more, https://github.com/joaotavora/yasnippet
   ("M-t" . 'lsp-find-type-definition)
   ("M-?" . 'lsp-find-references))
 
-  (use-package lsp-ui)
+  (use-package lsp-ui
+  :ensure t)
 
 #+END_SRC
 
@@ -677,6 +704,7 @@ See more, https://github.com/joaotavora/yasnippet
 #+BEGIN_SRC emacs-lisp
 
   (use-package go-mode
+  :ensure t
   :mode "\\.go\\'"
   :config
   (defun my/go-mode-setup ()
@@ -692,6 +720,7 @@ See more, https://github.com/joaotavora/yasnippet
 #+BEGIN_SRC emacs-lisp
 
   (use-package rust-mode
+  :ensure t
   :hook (rust-mode . lsp)
   :bind
   ("C-c g" . rust-run)
@@ -702,10 +731,12 @@ See more, https://github.com/joaotavora/yasnippet
   (setq lsp-rust-server 'rust-analyzer))
 
   (use-package cargo
+  :ensure t
   :hook (rust-mode . cargo-minor-mode)
   :diminish cargo-minor-mode)
 
   (use-package flycheck-rust
+  :ensure t
   :config (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
 
   (use-package racer
@@ -731,8 +762,9 @@ See more, https://github.com/joaotavora/yasnippet
 #+BEGIN_SRC emacs-lisp
 
 (use-package xref
-  :pin gnu
-  :bind (("s-r" . #'xref-find-references)
+:ensure t
+:pin gnu
+:bind (("s-r" . #'xref-find-references)
          ("C-<down-mouse-1>" . #'xref-find-definitions)
          ("C-S-<down-mouse-1>" . #'xref-find-references)
          ("C-<down-mouse-2>" . #'xref-go-back)
@@ -740,19 +772,21 @@ See more, https://github.com/joaotavora/yasnippet
          ("s-]" . #'xref-go-forward)))
 
 (use-package eldoc
-  :pin gnu
-  :diminish
-  :bind ("s-d" . #'eldoc)
-  :custom (eldoc-echo-area-prefer-doc-buffer t))
+:ensure t
+:pin gnu
+:diminish
+:bind ("s-d" . #'eldoc)
+:custom (eldoc-echo-area-prefer-doc-buffer t))
   
 #+END_SRC
 ** yaml mode
 #+BEGIN_SRC emacs-lisp
 
 (use-package yaml-mode
-  :mode (("\\.yml\\'" . yaml-mode)
+:ensure t
+:mode (("\\.yml\\'" . yaml-mode)
          ("\\.yaml\\'" . yaml-mode))
-  :init
+:init
   (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode)))
 
 #+END_SRC
@@ -767,6 +801,7 @@ See more, https://github.com/joaotavora/yasnippet
 #+BEGIN_SRC emacs-lisp
 
   (use-package markdown-mode
+  :ensure t
   :mode (("\\.md\\'" . markdown-mode)
          ("\\.markdown\\'" . markdown-mode)))
 
@@ -774,7 +809,8 @@ See more, https://github.com/joaotavora/yasnippet
 ** dockerfile mode
 #+BEGIN_SRC emacs-lisp
 
-  (use-package dockerfile-mode)
+  (use-package dockerfile-mode
+  :ensure t)
 
 #+END_SRC
 
@@ -785,6 +821,7 @@ See more, https://github.com/joaotavora/yasnippet
   :defer)
 
   (use-package fish-mode
+  :ensure t
   :hook
   (fish-mode . (lambda () (add-hook 'before-save-hook 'fish_indent-before-save))))
 
@@ -829,6 +866,7 @@ See more, https://magit.vc/
 #+BEGIN_SRC emacs-lisp
 
   (use-package magit
+  :ensure t
   :diminish magit-autorevert-mode
   :diminish auto-revert-mode
   :config
@@ -851,6 +889,7 @@ See more, https://magit.vc/
   ))
 
   (use-package forge
+  :ensure t
   :after magit)
 
   ;; hack to eliminate weirdness
@@ -858,18 +897,23 @@ See more, https://magit.vc/
     (defvar bug-reference-auto-setup-functions '()))
 
 
-  (use-package libgit :after magit)
+  (use-package libgit 
+  :ensure t
+  :after magit)
   (use-package magit-libgit
+  :ensure t
   :after (magit libgit))
 
 
   (use-package git-messenger
+  :ensure t
   :bind ("C-c x m" . git-messenger:popup-message)
   :config
   (setq git-messenger:show-detail t
         git-messenger:use-magit-popup t))
 
   (use-package git-timemachine
+  :ensure t
   :bind ("C-c x t" . git-timemachine))
 
 
@@ -914,30 +958,36 @@ helm mode
 See more, https://github.com/emacs-helm/helm
 #+BEGIN_SRC emacs-lisp
 
-  (use-package ag)
+  (use-package ag
+  :defer
+  :ensure t)
 
   (use-package helm-ag
-    :after ag)
+  :ensure t
+  :after ag)
 
   (use-package helm-projectile
-    :after helm
-    :config
+  :ensure t
+  :after helm
+  :config
     (helm-projectile-on))
 
   (use-package diminish
+  :ensure t
   :config
   (diminish 'visual-line-mode))
 
   (use-package helm
-    :diminish helm-mode
-    :init
+  :ensure t
+  :diminish helm-mode
+  :config
     (require 'helm-config)
-    :bind
+  :bind
     ("C-c f" . helm-projectile-find-file-dwim)
     ("M-x" . helm-M-x)
     ("C-x r b" . helm-filtered-bookmarks)
     ("C-x C-f" . helm-find-files)
-    :init
+  :init
     (helm-mode 1)
     (customize-set-variable 'helm-ff-lynx-style-map t))
 
@@ -955,15 +1005,16 @@ See more, https://github.com/magnars/multiple-cursors.el
     (customize-set-variable 'blink-matching-paren t))
 
   (use-package multiple-cursors
-    :init
+  :ensure t
+  :init
     (defvar gpolonkai/mc-prefix-map (make-sparse-keymap)
       "Prefix keymap for multiple-cursors")
     (define-prefix-command 'gpolonkai/mc-prefix-map)
     (define-key global-map (kbd "C-c m") 'gpolonkai/mc-prefix-map)
-    :hook
+  :hook
     (multiple-cursors-mode-enabled . gpolonkai/no-blink-matching-paren)
     (multiple-cursors-mode-disabled . gpolonkai/blink-matching-paren)
-    :bind
+  :bind
     (:map gpolonkai/mc-prefix-map
      ("t" . mc/mark-all-like-this)
      ("m" . mc/mark-all-like-this-dwim)
@@ -1010,6 +1061,7 @@ see more, https://github.com/editorconfig/editorconfig-emacs
 #+BEGIN_SRC emacs-lisp
 
   (use-package smartparens
+  :ensure t
   :hook ((prog-mode . smartparens-mode)
 	 (emacs-lisp-mode . smartparens-strict-mode))
   :init
@@ -1020,6 +1072,7 @@ see more, https://github.com/editorconfig/editorconfig-emacs
   (require 'smartparens-config))
 
   (use-package ws-butler
+  :ensure t
   :hook (prog-mode . ws-butler-mode))
 
 #+END_SRC
@@ -1028,7 +1081,8 @@ see more, https://github.com/editorconfig/editorconfig-emacs
 #+BEGIN_SRC emacs-lisp
 
 (use-package auto-highlight-symbol
-  :config
+:ensure t
+:config
   (global-auto-highlight-symbol-mode t))
 
 #+END_SRC
@@ -1038,8 +1092,9 @@ toggle other windows for maximum focus. when foucus is no longer needed, they
 can be toggled back. C-x 1 is conveniently bound to it.
  #+BEGIN_SRC emacs-lisp
 
-   (use-package zygospore
-   :bind
+  (use-package zygospore
+  :ensure t
+  :bind
    (:map ctl-x-map
      ("1" . zygospore-toggle-delete-other-windows)))
 
@@ -1050,6 +1105,7 @@ text object manipulation
 #+BEGIN_SRC emacs-lisp
 
   (use-package objed
+  :ensure t
   :demand t
   :bind
   (:map global-map
@@ -1060,7 +1116,8 @@ text object manipulation
 * all the icons
 #+BEGIN_SRC emacs-lisp
 
-  (use-package all-the-icons)
+  (use-package all-the-icons
+  :ensure t)
 
 #+END_SRC
 
@@ -1068,10 +1125,12 @@ text object manipulation
 #+BEGIN_SRC emacs-lisp
 
   (use-package rainbow-delimiters
+  :ensure t
   :hook
   (prog-mode . rainbow-delimiters-mode))
 
-  (use-package rainbow-identifiers)
+  (use-package rainbow-identifiers
+  :ensure t)
 
 #+END_SRC
 
@@ -1080,6 +1139,7 @@ for all your spell-checking needs.
 #+BEGIN_SRC emacs-lisp
 
   (use-package flyspell
+  :ensure t
   :hook
   (prog-mode . flyspell-prog-mode)
   (text-mode . flyspell-mode))
@@ -1090,6 +1150,8 @@ for all your spell-checking needs.
 #+BEGIN_SRC emacs-lisp
 
   (use-package goto-last-change
+  :ensure t
+  :defer
   :bind
   (("M-g /" . goto-last-change)))
 
@@ -1099,6 +1161,7 @@ for all your spell-checking needs.
 #+BEGIN_SRC emacs-lisp
 
   (use-package fancy-narrow
+  :ensure t
   :config
   (fancy-narrow-mode 1))
 
@@ -1109,14 +1172,19 @@ automaticlly revert changed files
 #+BEGIN_SRC emacs-lisp
 
   (use-package autorevert
+  :ensure t
   :config
   (global-auto-revert-mode 1))
 
   (use-package electric
+  :ensure t
+  :defer
   :config
   (electric-indent-mode 1))
 
   (use-package savehist
+  :ensure t
+  :defer
   :config
   (savehist-mode 1))
 
@@ -1125,7 +1193,9 @@ automaticlly revert changed files
 * speed bar
 #+BEGIN_SRC emacs-lisp
 
-  (use-package speedbar)
+  (use-package speedbar
+  :ensure t
+  :defer)
 
 #+END_SRC
 
@@ -1133,7 +1203,9 @@ automaticlly revert changed files
 display running background tasks
 #+BEGIN_SRC emacs-lisp
 
-  (use-package spinner)
+  (use-package spinner
+  :ensure t
+  :defer)
 
 #+END_SRC
 
@@ -1142,6 +1214,7 @@ show form feeds as a horizontal line
 #+BEGIN_SRC emacs-lisp
 
   (use-package form-feed
+  :ensure t
   :hook
   (emacs-lisp-mode . form-feed-mode)
   (compilation-mode . form-feed-mode)
@@ -1153,6 +1226,7 @@ show form feeds as a horizontal line
 #+BEGIN_SRC emacs-lisp
 
   (use-package golden-ratio
+  :ensure t
   :config
   (add-to-list 'golden-ratio-extra-commands 'ace-window)
   (golden-ratio-mode t))
@@ -1164,6 +1238,7 @@ show number of matches in the mode line when searching
 #+BEGIN_SRC emacs-lisp
 
   (use-package anzu
+  :ensure t
   :delight
   :config
   (global-anzu-mode 1))
@@ -1174,6 +1249,7 @@ show number of matches in the mode line when searching
 #+BEGIN_SRC emacs-lisp
 
   (use-package projectile
+  :ensure t
   :delight '(:eval (concat " [" projectile-project-name "]"))
   :pin melpa-stable
   :config
@@ -1183,6 +1259,7 @@ show number of matches in the mode line when searching
    ("C-c p" . projectile-command-map)))
 
   (use-package ag
+  :ensure t
   :after projectile
   :bind
   (:map projectile-mode-map
@@ -1204,7 +1281,8 @@ show number of matches in the mode line when searching
 	(call-interactively 'loccur)))
 
     (use-package loccur
-      :bind
+    :ensure t
+    :bind
       (:map gpolonkai/pers-map
        ("C-c a" . gpolonkai/toggle-loccur)))
 
@@ -1230,6 +1308,7 @@ show number of matches in the mode line when searching
 #+BEGIN_SRC emacs-lisp
 
   (use-package conventional-changelog
+  :ensure t
   :init
   (with-eval-after-load 'magit-tag
     (transient-append-suffix 'magit-tag
