--- a/myinit.org
+++ b/myinit.org
@@ -132,20 +132,17 @@
 
 * tree-sitter
 #+BEGIN_SRC emacs-lisp
-
-  (use-package tree-sitter-hl-mode
-  :defer
+  (use-package tree-sitter
   :ensure t
-  :hook ((ruby-mode . tree-sitter-hl-mode)
-         (js-mode . tree-sitter-hl-mode)
-         (rust-mode . tree-sitter-hl-mode)
-         (sh-mode . tree-sitter-hl-mode)
-         (python-mode . tree-sitter-hl-mode)
-         (c-mode . tree-sitter-hl-mode)
-         (typescript-mode . tree-sitter-hl-mode)
-         (go-mode . tree-sitter-hl-mode)))
+  :defer
+  :hook ((rust-mode . tree-sitter-mode) (go-mode . tree-sitter-mode)))
+
+  (use-package tree-sitter-langs
+  :ensure t
+  :defer)
 
 #+END_SRC
+
 * prodigy
 #+BEGIN_SRC emacs-lisp
 
@@ -731,7 +728,7 @@ See more, https://github.com/joaotavora/yasnippet
   (setq lsp-rust-server 'rust-analyzer))
 
   (use-package cargo
-  :ensure t
+  :defer
   :hook (rust-mode . cargo-minor-mode)
   :diminish cargo-minor-mode)
 
