--- a/myinit.org
+++ b/myinit.org
@@ -329,7 +329,7 @@ Editor themes, see more https://github.com/hlissner/emacs-doom-themes
   (load-theme 'doom-zenburn  t)
 
   ;; Enable flashing mode-line on errors
-  (doom-themes-visual-bell-config)
+;;  (doom-themes-visual-bell-config)
 
   ;; Enable custom neotree (all-the-icons must be installed!)
   ;; (doom-themes-neotree-config)
