config(rust mode): racer ensure to true
Signed-off-by: wanglei <wanglei4687@gmail.com>

--- a/myinit.org
+++ b/myinit.org
@@ -746,6 +746,7 @@ See more, https://github.com/joaotavora/yasnippet
 
   (use-package racer
   :after rust-mode
+  ensure t
   :diminish racer-mode
   :hook (rust-mode . racer-mode)
   :bind
