--- a/myinit.org
+++ b/myinit.org
@@ -737,6 +737,7 @@ See more, https://github.com/joaotavora/yasnippet
 
   (use-package cargo
   :defer
+  :ensure t
   :hook (rust-mode . cargo-minor-mode)
   :diminish cargo-minor-mode)
 
