perf(doom, forge): update config
rm quelpa for network problem, ssl timeout
add forge key bindings
optimize doom theme config

Signed-off-by: wanglei <wanglei4687@gmail.com>
Acked-by: wanglei <wanglei4687@gmail.com>

--- a/myinit.org
+++ b/myinit.org
@@ -866,7 +866,7 @@ See more, https://github.com/joaotavora/yasnippet
   :mode "\\.sass\\'")
 
 #+END_SRC
-* Magit
+* Magitxo
 Git plugin
 See more, https://magit.vc/
 #+BEGIN_SRC emacs-lisp
@@ -903,9 +903,18 @@ See more, https://magit.vc/
      ("C-c v r" . forge-list-pullreqs)
      ("C-c v a" . forge-create-pullreq-from-issue)
      ("C-c v u" . forge-create-issue)
+     ("C-c v d" . forge-add-repository)
+     ("C-c v l" . forge-list-topics)
+     ("C-c v n" . forge-forge-edit-topic-note)
+     ("C-c v m" . forge-edit-mark)
+     ("C-c v t" . forge-edit-topic-title)
+     ("C-c v o" . forge-edit-topic-review-requests)
+     ("C-c v q" . forge-edit-topic-milestone)
+     ("C-c v f" . forge-edit-topic-assignees)
+     ("C-c v s" . forge-edit-topic-state)
    ))
 
-  ;; hack to eliminate weirdness
+  ;; Hack to eliminate weirdness
   (unless (boundp 'bug-reference-auto-setup-functions)
     (defvar bug-reference-auto-setup-functions '()))
 
