chore(myinit): fix typo
Signed-off-by: wanglei <wanglei4687@gmail.com>

--- a/myinit.org
+++ b/myinit.org
@@ -866,7 +866,7 @@ See more, https://github.com/joaotavora/yasnippet
   :mode "\\.sass\\'")
 
 #+END_SRC
-* Magitxo
+* Magit
 Git plugin
 See more, https://magit.vc/
 #+BEGIN_SRC emacs-lisp
