--- a/myinit.org
+++ b/myinit.org
@@ -2,6 +2,13 @@
 #+PROPERTY: header-args :comments yes :results silent
 
 * pre config
+** project
+#+BEGIN_SRC emacs-lisp
+  
+  (projectile-global-mode)
+  (setq projectile-completion-system 'helm)
+#+END_SRC
+
 ** quelpa
 #+BEGIN_SRC emacs-lisp
 ;  (unless (package-installed-p 'quelpa)
@@ -28,9 +35,24 @@
   
   (menu-bar-mode -1)
   (tool-bar-mode -1)
+;;  (scroll-bar-mode -1)  
 ;;  (set-face-attribute 'region nil :background "#fffacd")
   (add-to-list 'default-frame-alist '(fullscreen . maximized))
 
+  (mouse-wheel-mode -1)  
+  (global-set-key [wheel-up] 'ignore)
+  (global-set-key [double-wheel-up] 'ignore)
+  (global-set-key [triple-wheel-up] 'ignore)
+  (global-set-key [wheel-down] 'ignore) 
+  (global-set-key [double-wheel-down] 'ignore)
+  (global-set-key [triple-wheel-down] 'ignore)
+  (global-set-key [wheel-left] 'ignore)
+  (global-set-key [double-wheel-left] 'ignore)
+  (global-set-key [triple-wheel-left] 'ignore)
+  (global-set-key [wheel-right] 'ignore)
+  (global-set-key [double-wheel-right] 'ignore) 
+  (global-set-key [triple-wheel-right] 'ignore)  
+  
   (require 'hl-line)
   (add-hook 'prog-mode-hook #'hl-line-mode)
   (add-hook 'text-mode-hook #'hl-line-mode)
@@ -74,7 +96,7 @@
     ;; the documentation can get bent imo
     use-short-answers t
     ;; eke out a little more scrolling performance
-    fast-but-imprecise-scrolling t
+;;    fast-but-imprecise-scrolling t
     ;; prefer newer elisp files
     load-prefer-newer t
     ;; when I say to quit, I mean quit
@@ -135,8 +157,8 @@ see more https://github.com/hlissner/emacs-doom-themes
 doomemacs: https://github.com/doomemacs/themes
 #+BEGIN_SRC emacs-lisp
   
-;;  (use-package color-theme-modern
-;;  :ensure t)
+  (use-package color-theme-modern
+  :ensure t)
 
   (use-package doom-themes
   :ensure t
@@ -150,6 +172,143 @@ doomemacs: https://github.com/doomemacs/themes
   :ensure t
   :init (doom-modeline-mode 1))
 
+#+END_SRC
+
+* common
+** org mode
+see more https://orgmode.org/
+#+BEGIN_SRC emacs-lisp
+  
+  (use-package org
+  :ensure t
+  :pin org)
+
+  ;; this config for linux
+  ;; (setenv "BROWSER" "chromium-browser")
+  (use-package org-bullets
+  :ensure t
+  :config
+  (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
+
+  ;; this config for linux
+  ;; (setq org-file-apps (append '(
+  ;; ("\\.pdf\\'" . "evince %s")
+  ;; ("\\.x?html?\\'" . "/usr/bin/chromium-browser %s")
+  ;; ) org-file-apps ))`
+
+
+  (setq org-agenda-files (list "~/Dropbox/Org/schedule.org"
+                                 "~/.emacs.d/org/course.org"
+                                 "~/.emacs.d/org/exercise.org"
+                                 "~/.emacs.d/org/gtd.org"
+                                 "~/.emacs.d/org/social.org"
+                                 "~/.emacs.d/org/project.org"))
+
+  ;; Multiple keyword sets in one file
+  (setq org-todo-keywords
+    '((sequence "TODO" "IN-PROGRESS" "WAIT" "|" "DONE")
+      (sequencee "REPORT" "BUG" "KNOWNCAUSE" "|" "FIXED")
+      (sequence "|" "CANCELED")))
+
+  (setq org-todo-keyword-faces 
+    '(("TODO" . (:foreground "orange" :weight bold)) 
+      ("REPORT" . (:foreground "orange" :weight bold))
+      ("IN-PROGRESS" . "cyan")
+      ("BUG" . "cyan")
+      ("KNOWNCAUSE" . "cyan")
+      ("DONE" . "green")
+      ("FIXED" . "green")
+      ("CANCELED" . (:foreground "blue" :weight bold))))
+
+  (setq org-tag-alist '((:startgroup . nil)
+                          ("@work" . ?w)
+                          ("@home" . ?h)
+                          ("@course" . ?c)
+                          ("@social" . ?s)
+                          (:endgroup . nil)
+                          ("laptop" . ?l)
+                          ("pc" . ?p)))
+
+#+END_SRC 
+
+** fancy narrow
+#+BEGIN_SRC emacs-lisp
+  (use-package fancy-narrow
+  :defer
+  :ensure t
+  :config
+  (fancy-narrow-mode 1))
+#+END_SRC
+
+** icon
+#+BEGIN_SRC emacs-lisp
+  
+  (ignore-errors (set-frame-font "JuliaMono-12"))
+
+  (use-package all-the-icons
+  :ensure t)
+
+  (use-package all-the-icons-dired
+  :ensure t
+  :after all-the-icons
+  :hook (dired-mode . all-the-icons-dired-mode))
+
+  (use-package all-the-icons-ivy-rich
+  :ensure t
+  :after ivy-rich
+  :config (all-the-icons-ivy-rich-mode 1))
+#+END_SRC
+
+** linum
+#+BEGIN_SRC emacs-lisp
+
+  (use-package linum
+  :ensure t
+  :config
+  :bind (("C-c l" . linum-mode)))
+#+END_SRC
+
+** treemacs
+#+BEGIN_SRC emacs-lisp
+
+  (use-package treemacs
+  :ensure t
+  :bind (
+  ("C-c C-x t" . treemacs)
+  ("C-c C-x e" . treemacs-edit-workspaces)
+  ("C-c C-x d" . treemacs-decrease-width)
+  ("C-c C-x i" . treemacs-increase-width)
+  ("C-c C-x w" . treemacs-switch-workspace)))
+
+  (use-package treemacs-projectile
+  :after (treemacs projectile)
+  :ensure t)
+
+  (use-package treemacs-icons-dired
+  :hook (dired-mode . treemacs-icons-dired-enable-once)
+  :ensure t)
+
+  (use-package treemacs-magit
+  :after (treemacs magit)
+  :ensure t)
+
+  (use-package treemacs-persp ;;treemacs-perspective if you use perspective.el vs. persp-mode
+  :after (treemacs persp-mode) ;;or perspective vs. persp-mode
+  :ensure t
+  :config (treemacs-set-scope-type 'Perspectives))
+
+  (use-package treemacs-tab-bar ;;treemacs-tab-bar if you use tab-bar-mode
+  :after (treemacs)
+  :ensure t
+  :config (treemacs-set-scope-type 'Tabs))
+
+  (use-package all-the-icons
+  :ensure t)
+
+  (use-package all-the-icons-dired
+  :ensure t
+  :after all-the-icons
+  :hook (dired-mode . all-the-icons-dired-mode))
 #+END_SRC
 
 * editor
@@ -183,31 +342,10 @@ doomemacs: https://github.com/doomemacs/themes
   (customize-set-variable 'helm-ff-lynx-style-map t))
 #+END_SRC
 
-** dired-sidebar
-#+BEGIN_SRC emacs-lisp
-  (use-package dired-sidebar
-  :bind (("C-x C-n" . dired-sidebar-toggle-sidebar))
-  :ensure t
-  :commands (dired-sidebar-toggle-sidebar)
-  :init
-  (add-hook 'dired-sidebar-mode-hook
-            (lambda ()
-              (unless (file-remote-p default-directory)
-                (auto-revert-mode))))
-  :config
-  (push 'toggle-window-split dired-sidebar-toggle-hidden-commands)
-  (push 'rotate-windows dired-sidebar-toggle-hidden-commands)
-
-  (setq dired-sidebar-subtree-line-prefix "__")
-  (setq dired-sidebar-theme 'vscode)
-  (setq dired-sidebar-use-term-integration t)
-  (setq dired-sidebar-use-custom-font t))
-#+END_SRC
-
 ** magit
 see more, https://magit.vc/
 #+BEGIN_SRC emacs-lisp
- 
+
   (use-package magit
   :ensure t
   :diminish magit-autorevert-mode
@@ -259,9 +397,10 @@ see more, https://magit.vc/
     (defvar bug-reference-auto-setup-functions '()))
 
 
-  (use-package libgit 
-  :ensure t
-  :after magit)
+;;  (use-package libgit 
+;;  :ensure t
+;;  :after magit)
+  
   (use-package magit-libgit
   :ensure t
   :after (magit libgit))
@@ -278,49 +417,29 @@ see more, https://magit.vc/
   :ensure t
   :bind ("C-c x t" . git-timemachine)) 
 #+END_SRC
-** treemacs
+** rainbow
 #+BEGIN_SRC emacs-lisp
-
-  (use-package treemacs
+  
+  (use-package rainbow-delimiters
   :ensure t
-  :bind (
-  ("C-c C-x t" . treemacs)
-  ("C-c C-x e" . treemacs-edit-workspaces)
-  ("C-c C-x d" . treemacs-decrease-width)
-  ("C-c C-x i" . treemacs-increase-width)
-  ("C-c C-x w" . treemacs-switch-workspace)))
+  :hook
+  (prog-mode . rainbow-delimiters-mode))
 
-  (use-package treemacs-projectile
-  :after (treemacs projectile)
+  (use-package rainbow-identifiers
   :ensure t)
-
-  (use-package treemacs-icons-dired
-  :hook (dired-mode . treemacs-icons-dired-enable-once)
-  :ensure t)
-
-  (use-package treemacs-magit
-  :after (treemacs magit)
-  :ensure t)
-
-  (use-package treemacs-persp ;;treemacs-perspective if you use perspective.el vs. persp-mode
-  :after (treemacs persp-mode) ;;or perspective vs. persp-mode
-  :ensure t
-  :config (treemacs-set-scope-type 'Perspectives))
-
-  (use-package treemacs-tab-bar ;;treemacs-tab-bar if you use tab-bar-mode
-  :after (treemacs)
-  :ensure t
-  :config (treemacs-set-scope-type 'Tabs))
-
-  (use-package all-the-icons
-  :ensure t)
-
-  (use-package all-the-icons-dired
-  :ensure t
-  :after all-the-icons
-  :hook (dired-mode . all-the-icons-dired-mode))
 #+END_SRC
 
+** anzu
+#+BEGIN_SRC emacs-lisp
+  (use-package anzu
+  :ensure t
+  :delight
+  :bind (
+    ("C-x r i" . anzu-isearch-query-replace)     
+    ("C-x r a" . anzu-query-replace))
+  :config
+  (global-anzu-mode 1))
+#+END_SRC 
 * programming
 programming config
 ** lsp
@@ -440,69 +559,4 @@ programming config
   (add-hook 'go-mode-hook #'my/go-mode-setup)
   :hook
   (go-mode . lsp))
-#+END_SRC
-* common
-** org mode
-see more https://orgmode.org/
-#+BEGIN_SRC emacs-lisp
-  
-  (use-package org
-  :ensure t
-  :pin org)
-
-  ;; this config for linux
-  ;; (setenv "BROWSER" "chromium-browser")
-  (use-package org-bullets
-  :ensure t
-  :config
-  (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
-
-  ;; this config for linux
-  ;; (setq org-file-apps (append '(
-  ;; ("\\.pdf\\'" . "evince %s")
-  ;; ("\\.x?html?\\'" . "/usr/bin/chromium-browser %s")
-  ;; ) org-file-apps ))`
-
-
-  (setq org-agenda-files (list "~/Dropbox/Org/schedule.org"
-                                 "~/.emacs.d/org/course.org"
-                                 "~/.emacs.d/org/exercise.org"
-                                 "~/.emacs.d/org/gtd.org"
-                                 "~/.emacs.d/org/social.org"
-                                 "~/.emacs.d/org/project.org"))
-
-  ;; Multiple keyword sets in one file
-  (setq org-todo-keywords
-    '((sequence "TODO" "IN-PROGRESS" "WAIT" "|" "DONE")
-      (sequencee "REPORT" "BUG" "KNOWNCAUSE" "|" "FIXED")
-      (sequence "|" "CANCELED")))
-
-  (setq org-todo-keyword-faces 
-    '(("TODO" . (:foreground "orange" :weight bold)) 
-      ("REPORT" . (:foreground "orange" :weight bold))
-      ("IN-PROGRESS" . "cyan")
-      ("BUG" . "cyan")
-      ("KNOWNCAUSE" . "cyan")
-      ("DONE" . "green")
-      ("FIXED" . "green")
-      ("CANCELED" . (:foreground "blue" :weight bold))))
-
-  (setq org-tag-alist '((:startgroup . nil)
-                          ("@work" . ?w)
-                          ("@home" . ?h)
-                          ("@course" . ?c)
-                          ("@social" . ?s)
-                          (:endgroup . nil)
-                          ("laptop" . ?l)
-                          ("pc" . ?p)))
-
-#+END_SRC 
-
-** fancy narrow
-#+BEGIN_SRC emacs-lisp
-  (use-package fancy-narrow
-  :defer
-  :ensure t
-  :config
-  (fancy-narrow-mode 1))
 #+END_SRC
